# big_boy_benchmarking

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  big_boy_benchmarking_synthetic_blow_revisions_02_handoff.md  kato_collapse_notes.tex  kato_collapse_refs.bib  logHRL.bib  pyproject.toml  tropicalization_and_binary_coset_towers.aux  tropicalization_and_binary_coset_towers.tex
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: artifact_reproducibility_problem.md  bug_report.md  environment_proposal.md  evaluation_readout_problem.md
.github/workflows/: ci.yml
artifacts/: README.md
artifacts/schemas/: artifact_schema_v001.json
assets/environment_designs/: .$gridlock_001.svg.bkp  .$gridlock_001_end.svg.bkp  .$gridlock_001_start.svg.bkp
assets/images/: .$diagrams.xml.bkp  Untitled Diagram.xml  bad_lift.xml  bad_lift_dark.xml  bad_lift_light.xml  degen.drawio  diagrams.xml
docs/: README.md  entropy_surprise_kl.md  mathematical_notes_on_RL_training.md  protips_and_pitfalls.md
docs/design/: 01_001_initial_benchmarking_goals_discussion.md  01_002_state_collapser_read_only_reconnaissance.md  01_003_benchmark_system_and_artifact_contract_blueprint.md  README.md
docs/environments/: README.md  counterpoint_symbolic_v001.md  plate_support_5x5_default_v001.md  upstream_smoke_plate_support.md  upstream_smoke_rl_counterpoint_v3.md
docs/evaluations/: README.md
docs/experiments/: README.md  counterpoint_symbolic_v001_first_matrix.md  upstream_smoke_readout_discipline_v001.md
docs/methods/: README.md  artifact_contract.md  benchmark_modes.md  counterpoint_lift_fibers.md  counterpoint_path_volume.md  counterpoint_reward_fibers.md  counterpoint_schema_diagnostics.md  counterpoint_serious_learning.md  metric_channels.md  seed_bundles.md  statistics.md  timing_and_readout_discipline.md
docs/prime_directive/: README.md  artifact_table_to_readable_document_protocol.md  common_failure_mode_004_false_attribution_and_invented_project_owner_turns.md  environment_construction_for_benchmark_evaluations_protocol.md  evaluation_construction_for_readable_artifacts_protocol.md
docs/results/: README.md  counterpoint_symbolic_v001_first_smoke.md  upstream_smoke_readout_discipline_v001.md
scripts/: __init__.py  build_release_artifact_bundle.py  release_hygiene.py  run_warehouse_gridlock_tower_curriculum_train.sh  run_warehouse_gridlock_tower_transformer_curriculum_train.sh
src/big_boy_benchmarking/: __init__.py  _version.py  state_collapser_probe.py
tests/: test_release_hygiene.py  test_state_collapser_dependency.py
tests/artifacts/: test_manifests.py  test_paths.py  test_validators.py  test_writers.py
tests/cli/: test_cli.py
tests/metrics/: test_bootstrap.py  test_event_rows.py  test_summaries.py  test_timing.py
(+1318 files in other folders)
