[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "big-boy-benchmarking"
version = "0.1.0b1"
description = "Calibration, smoke, and early benchmark harnesses for state_collapser."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
authors = [
  { name = "Tyler Foster" },
]
keywords = [
  "reinforcement-learning",
  "benchmarking",
  "state-collapser",
  "hierarchical-rl",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pillow>=10.0",
  "state-collapser[rl] @ git+https://github.com/TYLERSFOSTER/state_collapser.git@v0.7.2",
  "tqdm>=4.67",
]

[project.optional-dependencies]
ml = [
  "torch>=2.4",
]

[project.urls]
Homepage = "https://github.com/TYLERSFOSTER/big_boy_benchmarking"
Repository = "https://github.com/TYLERSFOSTER/big_boy_benchmarking"
Issues = "https://github.com/TYLERSFOSTER/big_boy_benchmarking/issues"
state_collapser = "https://github.com/TYLERSFOSTER/state_collapser"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/big_boy_benchmarking"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "UP",
]
